--- a/learnVue/05-事件监听/02-v-on的参数问题.html
+++ b/learnVue/05-事件监听/02-v-on的参数问题.html
@@ -9,6 +9,10 @@
 			<!-- 事件调用的方法没有参数  -->
 			<button @click="btn1Click">按钮一</button>
 			<button @click="btn2Click">按钮二</button>
+			<button @click="btn3Click">按钮三</button>
+			<button @click="btn4Click">按钮四</button>
+			<button @click="btn5Click">按钮五</button>
+
 		</div>
 		<script src="../js/vue.js"></script>
 		<script>
