--- a/selfChecking/css/水平垂直居中1.html
+++ b/selfChecking/css/水平垂直居中1.html
@@ -3,24 +3,24 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
-			<link rel="stylesheet" href="common/common.css" />
+		<link rel="stylesheet" href="common/common.css" />
 		<style>
 			.parent{
-				position: relative;			
+				position: relative;
 			}
 			.children{
-				position: position;
+				position: absolute;
 				top: 0;
-				left: 0;
 				right: 0;
 				bottom: 0;
+				left: 0;
 				margin: auto;
 			}
 		</style>
 	</head>
 	<body>
 		<div class="parent">
-			<div class="children">水平居中2</div>
+			<div class="children"> 水平垂直居中1 绝对定位+margin:auto</div>
 		</div>
 	</body>
 </html>
