--- a/learnReact/learnWebpack/public/index.html
+++ b/learnReact/learnWebpack/public/index.html
@@ -7,6 +7,9 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <h1>welcome</h1>
+    <img src="static/sugarfina.png" />
+  </div>
 </body>
 </html>
